Epost på rapporter som tekst

--- a/twig/Components/epost.html.twig
+++ b/twig/Components/epost.html.twig
@@ -1,3 +1,4 @@
+<span>{{ epost }}</span>
 <a href="mailto:{{epost}}" title="{{epost}}">
 	<span style="white-space: nowrap;">
 		<span class="dashicons dashicons-email dashicons-inline"></span>
