Fjerner test kode

--- a/twig/UKMFestivalenHotell/rapport.html.twig
+++ b/twig/UKMFestivalenHotell/rapport.html.twig
@@ -110,7 +110,7 @@
                                 <td>{{ leder.getNavn() }}</td>
                                 <td>{{ leder.getMobil() }}</td>
                             {% if leder.getRom() %}
-                                <td>{{ leder.getRom().getType() }} (kapasitet: {{ leder.getRom().getKapasitet() }}) ID: {{ leder.getRom().getId() }}</td>
+                                <td>{{ leder.getRom().getType() }}</td>
                             {% else %}
                                 <td>-</td>    
                             {% endif %}
