--- a/twig/UKMFestivalenHotell/rapport.html.twig
+++ b/twig/UKMFestivalenHotell/rapport.html.twig
@@ -46,7 +46,7 @@
                             {% if leder.getRom() %}
                                 <td>{{ leder.getRom().getType() }}</td>
                             {% else %}
-                                <td>-</td>    
+                                <td>enkeltrom</td>    
                             {% endif %}
                                 
                                 <td>{{ fylker[fylke_key] ? fylker[fylke_key] : 'UKM Norge' }}</td>
