--- a/twig/Nominasjoner/rapport.html.twig
+++ b/twig/Nominasjoner/rapport.html.twig
@@ -23,7 +23,7 @@
 							<td class="voksen-navn">{{ innslag.getNavn() }}</td>
 							<td>
 								{% if innslag.erVideresendtTil( til ) %}
-									<div class="dashicons dashicons-warning yes" width="16"></div>
+									<div class="dashicons dashicons-warning warning" width="16"></div>
 									<span class="dashicon">Videresendt</span>
 								{% else %}
 									{% if nominasjon.harVoksenSkjema() and nominasjon.harDeltakerskjema() %}
@@ -70,6 +70,9 @@
 	}
 	.dashicons.no {
 		color: #b94a48 !important;
+	}
+	.dashicons.warning {
+		color: #f78022 !important;
 	}
 	span.dashicon {
 		vertical-align: text-top;
