Små fix på rapport om Deltakere

--- a/twig/Deltakere/rapport.html.twig
+++ b/twig/Deltakere/rapport.html.twig
@@ -3,11 +3,11 @@
 {% if sorteringMetode == 'alfabetisk' %}
     <table id="rapportDeltakereTable" class="table table-striped">
         <tr>
-            <th>Deltaker navn</th>
-            <th>Innslag navn</th>
-            <th>Innslag type</th>
-            <th>Kommune</th>
-            <th>Fylke</th>
+            <th><h5>Deltaker navn</h5></th>
+            <th><h5>Innslag navn</h5></th>
+            <th><h5>Innslag type</h5></th>
+            <th><h5>Kommune</h5></th>
+            <th><h5>Fylke</h5></th>
         </tr>
 
         
