Fikser typo på InnOgUtlevering Rapport

--- a/twig/InnOgUtlevering/tittel.html.twig
+++ b/twig/InnOgUtlevering/tittel.html.twig
@@ -8,7 +8,7 @@
             <span class="small bold" style="opacity: .5">INN</span>
         </div>
     </div>
-    {{ innslag.getNavn() }}: {{ tittel.getNavn() }} ooo
+    {{ innslag.getNavn() }}: {{ tittel.getNavn() }}
 {% endblock %}
 
 {% block personer %}
