Henter arrangement fra Leder på LedereOversikt

--- a/twig/LedereOversikt/rapport.html.twig
+++ b/twig/LedereOversikt/rapport.html.twig
@@ -28,7 +28,7 @@
                         <td>{{ leder.getEpost() }}</td>
                         <td>{{ leder.getTypeNavn() }}</td>
                         <td>{{ ledereFylke['fylke'].getNavn() }}</td>
-                        <td>{{ ledereFylke['fra'].getNavn() }}</td>
+                        <td>{{ leder.getArrangementFra().getNavn() }}</td>
                     </tr>            
                 {% endfor %}
         </tbody>
